Bug 1268556 - clicking padding area of 'number' input should not blur. r=smaug